@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.243 2023/12/25 18:11:41 wiz Exp $
+# $NetBSD: Makefile,v 1.244 2023/12/25 18:14:34 wiz Exp $
 #
 
 COMMENT=	Text and binary editors
@@ -116,7 +116,6 @@ SUBDIR+=	p5-Padre-Plugin-Encrypt
 SUBDIR+=	p5-Padre-Plugin-Git
 SUBDIR+=	p5-Padre-Plugin-HG
 SUBDIR+=	p5-Padre-Plugin-Kate
-SUBDIR+=	p5-Padre-Plugin-Nopaste
 SUBDIR+=	p5-Padre-Plugin-PerlCritic
 SUBDIR+=	p5-Padre-Plugin-PerlTidy
 SUBDIR+=	p5-Padre-Plugin-SVN
