@@ -1,3 +1,0 @@
-This plugin allows sending stuff from Padre to a nopaste website with
-Ctrl+Shift+V, allowing for easy code / whatever sharing without having
-to open a browser.
